[Fix] -> Spacing param design improvement.

--- a/inc/customizer/custom-controls/spacing/spacing.scss
+++ b/inc/customizer/custom-controls/spacing/spacing.scss
@@ -27,5 +27,14 @@
 	}
 	input.ast-spacing-input {
 		text-align: center;
+		border-radius: 3px 0 0 3px;
+		display: block;
+		font-size: 12px;
+		padding: 4px 0;
+		width: 100%;
+		height: 28px;
+		border: 1px solid;
+		border-color: #a4afb7;
+		box-shadow: none;
 	}
 }
